# improved-qr-docker-2024

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
tests/: test_main.py
